--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 
 </head>
 <body>
-    <h1>Seja bem-vindo, visitante!</h1>
-    <h3>Filmes em promoções:</h3>
+    <header>
+        <nav class="container">
+            <h1>DSMovie</h1>
+            <a href="https://github.com/hutenford">/hutenford</a>
+
+        </nav>
+    </header>
 </body>
 </html>
