--- a/index.html
+++ b/index.html
@@ -22,6 +22,20 @@
             </div>
         </nav>
     </header>
+
+
+    <main>
+        <section id="dsmovie-cardlist" class="container">
+
+            <div class="dsmovie-card">
+                <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg" alt="The Sopranos">
+                <div class="dsmovie-card-description">
+                    <h3>The Sopranos</h3>
+                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
