--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DSMovie</title>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
+    <link rel="stylesheet" href="css/styles.css">
 
-    <link rel="stylesheet" href="css/styles.css" </head>
+</head>
 
 <body>
     <header>
@@ -27,12 +28,140 @@
     <main>
         <section id="dsmovie-cardlist" class="container">
 
-            <div class="dsmovie-card">
-                <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg" alt="The Sopranos">
-                <div class="dsmovie-card-description">
-                    <h3>The Sopranos</h3>
-                    <a class="dsmovie-btn" href="form.html">Avaliar</a>
+            <div class="row">
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
+                        <div class="dsmovie-card-description">
+                            <h3>The Sopranos</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/9QMtQNRaQ4rVnrpIb5EnfKNkkZ4.jpg"
+                            alt="Mad Men">
+                        <div class="dsmovie-card-description">
+                            <h3>Mad Men</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/jmWO2KxYLSb8QirBuVw2DUs3XTu.jpg"
+                            alt="The Wire">
+                        <div class="dsmovie-card-description">
+                            <h3>The Wire</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/sThSyrNVnzEQDQx2NeDEMgcVW5A.jpg"
+                            alt="Mr Nobody">
+                        <div class="dsmovie-card-description">
+                            <h3>Mr. Nobody</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/utghtkDDOhwEDS7r9hhRhn7Wneg.jpg"
+                            alt="Coherence">
+                        <div class="dsmovie-card-description">
+                            <h3>Coherence</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/ts6w1ITz48ODC0wHe8ymqeLH0FG.jpg"
+                            alt="Licorice Pizza">
+                        <div class="dsmovie-card-description">
+                            <h3>Licorice Pizza</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qRwkMMZhQRKM4uDaXpd2XbZZmkE.jpg"
+                            alt="Boyhood">
+                        <div class="dsmovie-card-description">
+                            <h3>Boyhood</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/pGWVZT13HBz70L30ytRMXpNkTgU.jpg"
+                            alt="Vertigo">
+                        <div class="dsmovie-card-description">
+                            <h3>Vertigo</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/lh65Y0sUQcRh5UVVgnTOfMUbN2c.jpg"
+                            alt="Goldfinger">
+                        <div class="dsmovie-card-description">
+                            <h3>Goldfinger/h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7g5v2zXedkwiFqDlWqcoRUUQYD6.jpg"
+                            alt="Sanjuro">
+                        <div class="dsmovie-card-description">
+                            <h3>Sanjuro</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/original/3oyaaxSKv07EqXaGufLE4IvcP7y.jpg"
+                            alt="Normal People">
+                        <div class="dsmovie-card-description">
+                            <h3>Normal People</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col mb-3">
+                    <div class="dsmovie-card">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/szoYdzHn7r1Qj2eHXiOdri8u26l.jpg"
+                            alt="A Ghost Story">
+                        <div class="dsmovie-card-description">
+                            <h3>A Ghost Story</h3>
+                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </section>
     </main>
