--- a/index.html
+++ b/index.html
@@ -52,124 +52,235 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/9QMtQNRaQ4rVnrpIb5EnfKNkkZ4.jpg"
-                            alt="Mad Men">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Mad Men</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/jmWO2KxYLSb8QirBuVw2DUs3XTu.jpg"
-                            alt="The Wire">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>The Wire</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/sThSyrNVnzEQDQx2NeDEMgcVW5A.jpg"
-                            alt="Mr Nobody">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Mr. Nobody</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/utghtkDDOhwEDS7r9hhRhn7Wneg.jpg"
-                            alt="Coherence">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Coherence</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/ts6w1ITz48ODC0wHe8ymqeLH0FG.jpg"
-                            alt="Licorice Pizza">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Licorice Pizza</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qRwkMMZhQRKM4uDaXpd2XbZZmkE.jpg"
-                            alt="Boyhood">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Boyhood</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/pGWVZT13HBz70L30ytRMXpNkTgU.jpg"
-                            alt="Vertigo">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Vertigo</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/lh65Y0sUQcRh5UVVgnTOfMUbN2c.jpg"
-                            alt="Goldfinger">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Goldfinger/h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7g5v2zXedkwiFqDlWqcoRUUQYD6.jpg"
-                            alt="Sanjuro">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Sanjuro</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/3oyaaxSKv07EqXaGufLE4IvcP7y.jpg"
-                            alt="Normal People">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>Normal People</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col mb-3">
+                </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/szoYdzHn7r1Qj2eHXiOdri8u26l.jpg"
-                            alt="A Ghost Story">
+                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
+                            alt="The Sopranos">
                         <div class="dsmovie-card-description">
-                            <h3>A Ghost Story</h3>
-                            <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            <h3>The Sopranos</h3>
+
+                            <div class="dsmovie-card-description-bottom">
+                                <h4>3.8</h4>
+                                <div>
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-full.svg" alt="Star">
+                                    <img src="img/star-half.svg" alt="Star">
+                                    <img src="img/star-empty.svg" alt="Star">
+                                </div>
+                                <p>2.345 avaliações</p>
+                                <a class="dsmovie-btn" href="form.html">Avaliar</a>
+                            </div>
                         </div>
                     </div>
                 </div>
