--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     <main>
         <section id="dsmovie-cardlist" class="container">
 
+
+            <div class="dsmovie-pagination-container">
+                <div class="dsmovie-pagination-box">
+                    <button disabled><img src="img/arrow.svg" alt="Voltar"></button>
+                    <p>1 de 21</p>
+                    <button><img class="dsmovie-flip-horizontal" src="img/arrow.svg" alt="Próxima"></button>
+                </div>
+            </div>
+
             <div class="row">
 
                 <div class="col mb-3">
@@ -54,10 +63,10 @@
                 </div>
                 <div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/szoYdzHn7r1Qj2eHXiOdri8u26l.jpg"
+                            alt="A Ghost Story">
                         <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                            <h3>A Ghost Story</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -75,10 +84,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
+                        <img src="https://www.themoviedb.org/t/p/original/3oyaaxSKv07EqXaGufLE4IvcP7y.jpg"
+                            alt="Normal People">
                         <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                            <h3>Normal People</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -96,10 +105,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/7g5v2zXedkwiFqDlWqcoRUUQYD6.jpg"
+                            alt="Sanjuro">
                         <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                            <h3>Sanjuro</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -117,10 +126,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/lh65Y0sUQcRh5UVVgnTOfMUbN2c.jpg"
+                            alt="Goldfinger">
                         <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                            <h3>Goldfinger</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -138,10 +147,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
-                        <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/pGWVZT13HBz70L30ytRMXpNkTgU.jpg"
+                        alt="Vertigo">
+                    <div class="dsmovie-card-description">
+                        <h3>Vertigo</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -159,10 +168,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
-                        <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                        <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qRwkMMZhQRKM4uDaXpd2XbZZmkE.jpg"
+                        alt="Boyhood">
+                    <div class="dsmovie-card-description">
+                        <h3>Boyhood</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -180,10 +189,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
-                        <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                        <img src="https://www.themoviedb.org/t/p/original/ts6w1ITz48ODC0wHe8ymqeLH0FG.jpg"
+                        alt="Licorice Pizza">
+                    <div class="dsmovie-card-description">
+                        <h3>Licorice Pizza</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -201,10 +210,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
-                        <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                        <img src="https://www.themoviedb.org/t/p/original/utghtkDDOhwEDS7r9hhRhn7Wneg.jpg"
+                        alt="Coherence">
+                    <div class="dsmovie-card-description">
+                        <h3>Coherence</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -222,10 +231,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
+                        <img src="https://www.themoviedb.org/t/p/original/sThSyrNVnzEQDQx2NeDEMgcVW5A.jpg"
+                            alt="Mr Nobody">
                         <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                            <h3>Mr. Nobody</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -243,10 +252,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
-                        <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                        <img src="https://www.themoviedb.org/t/p/original/jmWO2KxYLSb8QirBuVw2DUs3XTu.jpg"
+                        alt="The Wire">
+                    <div class="dsmovie-card-description">
+                        <h3>The Wire</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
@@ -264,10 +273,10 @@
                     </div>
                 </div><div class="col mb-3">
                     <div class="dsmovie-card">
-                        <img src="https://www.themoviedb.org/t/p/original/naszs57MtesBTI3DlxHQvBYOXD4.jpg"
-                            alt="The Sopranos">
+                        <img src="https://www.themoviedb.org/t/p/original/9QMtQNRaQ4rVnrpIb5EnfKNkkZ4.jpg"
+                            alt="Mad Men">
                         <div class="dsmovie-card-description">
-                            <h3>The Sopranos</h3>
+                            <h3>Mad Men</h3>
 
                             <div class="dsmovie-card-description-bottom">
                                 <h4>3.8</h4>
